--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -6,5 +6,5 @@
 
 <div class="text-center">
     <h1 class="display-4">My First Web Page in VS 2022</h1>    
-    <h2 class="display-4">This website is for testing purposes</h2>
+    <h2 class="display-4">This web application is for testing purposes</h2>
 </div>
